Changelog
=========

Unreleased
----------

- Made utils.protect work with Zope >= 2.11.
  [stefan]


1.0b1 - March 7, 2008
---------------------

- Refactor the code to offer a generic protect decorator for methods
  which takes a list of checkers as options. Add checkers for both the
  authenticator verification and HTTP POST-only.
  [wichert]


1.0a1 - January 27, 2008
------------------------

- Initial release
  [wichert]