@@ -1,4 +1,4 @@
-  plone.app.protect is copyright Wichert Akkerman
+  plone.protect is copyright 2008 by the Plone Foundation
 
   This program is free software; you can redistribute it and/or modify
   it under the terms of version 2 of the GNU General Public License as
