@@ -1,4 +1,0 @@
-from plone.app.protect.utils import protect
-
-from plone.app.protect.authenticator import check as CheckAuthenticator
-from plone.app.protect.postonly import check as PostOnly
