@@ -4,6 +4,11 @@ Changelog
 Unreleased
 ----------
 
+- Rename plone.app.protect to plone.protect: there is nothing Plone-specific
+  about the functionality in this package and it really should be used outside
+  of Plone as well.
+  [wichert]
+
 - Made utils.protect work with Zope >= 2.11.
   [stefan]
 
